--- a/index.html
+++ b/index.html
@@ -5,27 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri Tá ON</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <div class="container d-flex flex-column align-items-center mt-4 py-4" id="block_01">
-        <p class="text-center">Descubra como conquistar <strong>RENDA EXTRA</strong> ainda neste verão
-            2023/2024, por meio de estratégias, inovações e insights
-            revolucionários para sua carreira no mercado digital</p>
+    <div class="container d-flex flex-column align-items-center py-4" id="block_01">
+        <p class="block_text text_green"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
+            2023/2024, por meio de estratégias, <span class="text_orange">inovações e insights</span>
+            revolucionários para sua carreira no <span class="text_orange">mercado digital</span></strong></p>
 
             <img 
                 src="img/capa_ebook.jpg"
                 class="img-fluid mb-4"
                 alt="Capa do E-book">
 
-            <a href="#" class="btn btn-lg btn-success rounded-pill btn-nutri my-4">
+            <a href="#" class="btn btn-lg btn-success py-3 px-4 rounded-pill btn-nutri my-4">
                 Quero conquistar renda extra
             </a>
     </div>
 
-    <div class="container" id="block_02">
+    <div class="container-fluid" id="block_02">
+        <div class="container mt-4 py-4 d-flex flex-column align-items-center">
+            <h2 class="block_title">Pra quem é o Ebook <span class="text_orange">#ANutriTaOn?</span></h2>
 
+
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Nutricionistas que desejam se posicionar no mercado digital,
+                buscando estratégias atualizadas para seu segmento.</li>
+                <li class="list-group-item">Profissionais já atuantes online, insatisfeitas com seus resultados
+                atuais e em busca de novas percepções e técnicas do mercado.</li>
+                <li class="list-group-item">Que buscam reconfigurar suas marcas, evidenciar seu potencial e
+                demonstrar profissionalismo com clareza e segurança.</li>
+                <li class="list-group-item">Interessadas em dominar técnicas online valiosas para ampliar sua
+                expertise profissional.</li>
+                <li class="list-group-item">Que procuram liberdade financeira dentro da profissão.</li>
+                <li class="list-group-item">Aquelas que buscam desafios para alcançar novos patamares de
+                renda, multiplicando ganhos financeiros além da fonte de renda
+                principal.</li>
+            </ul>
+        </div>
     </div>
 
 </body>
