--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri Tá ON</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <div class="container d-flex flex-column align-items-center py-4" id="block_01">
-        <p class="block_text text_green"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
+    <div class="container block d-flex flex-column align-items-center" id="block_01">
+        <p class="block_text text-center text_green"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
             2023/2024, por meio de estratégias, <span class="text_orange">inovações e insights</span>
             revolucionários para sua carreira no <span class="text_orange">mercado digital</span></strong></p>
 
             <img 
-                src="img/capa_ebook.jpg"
-                class="img-fluid mb-4"
+                src="img/capa-ebook.png"
+                class="img-fluid my-4 py-4"
+                width="550"
+                height="624"
                 alt="Capa do E-book">
 
-            <a href="#" class="btn btn-lg btn-success py-3 px-4 rounded-pill btn-nutri my-4">
+            <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri my-4">
                 Quero conquistar renda extra
             </a>
     </div>
 
     <div class="container-fluid" id="block_02">
-        <div class="container mt-4 py-4 d-flex flex-column align-items-center">
+        <div class="container block mt-4 d-flex flex-column align-items-center">
             <h2 class="block_title">Pra quem é o Ebook <span class="text_orange">#ANutriTaOn?</span></h2>
-
 
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Nutricionistas que desejam se posicionar no mercado digital,
@@ -46,6 +49,53 @@
                 renda, multiplicando ganhos financeiros além da fonte de renda
                 principal.</li>
             </ul>
+
+            <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri btn-nutri-secondary my-4">
+                Quero multiplicar meus ganhos
+            </a>
+
+        </div>
+    </div>
+
+    <div class="container-fluid" id="block_03">
+        <div class="container block mt-4 d-flex flex-column align-items-center">
+            <h2 class="block_title text_orange">Porque trabalhar como nutricionista no mercado digital?</h2>
+
+            <p>Trabalhar como nutricionista no mercado digital oferece oportunidades únicas de expansão profissional e financeira.</p>
+            <p>Neste ambiente, você pode alcançar uma audiência global, oferecendo consultas e conselhos nutricionais sem as limitações geográficas.</p>
+
+            <p>Além disso, o mercado digital permite flexibilidade de horário, possibilitando equilibrar vida pessoal e trabalho.</p>
+
+            <p>Com a crescente busca por saúde e bem-estar online, você tem a chance de se destacar como um especialista, compartilhar 
+            conhecimento valioso e influenciar positivamente a vida das pessoas, tudo isso enquanto explora novas vertentes de renda
+            através de consultorias online, criação de conteúdo digital e parcerias estratégicas.</p>
+
+            <p>É uma oportunidade de crescimento contínuo, inovação e impacto significativo na área da nutrição.</p>
+
+            <img 
+                src="img/nutri.no.bg.png"
+                class="mt-4"
+                width="320"
+                height="490"
+                alt="Capa do E-book">
+
+            <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri">
+                Quero mudar de vida
+            </a>
+
+        </div>
+    </div>
+
+    <div class="container-fluid" id="block_04">
+        <div class="container block mt-4 d-flex flex-column align-items-center">
+            <p>São 10 tópicos abrangentes, cada um repleto de conteúdos
+                atualizados e estruturados em um formato passo-a-passo.</p>
+
+            <p>Com exemplos práticos, você aprenderá de forma fácil e intuitiva,
+                abrindo caminho para uma mentalidade de crescimento e sucesso.</p>
+            
+            <p>Prepare-se para desbloquear todo o seu potencial e revolucionar
+                sua abordagem profissional.</p>
         </div>
     </div>
 
