addimg do titulo no topo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 <body>
     
     <div class="container block d-flex flex-column align-items-center" id="block_01">
-        <p class="block_text text-center text_green"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
+
+        <img src="img/title.anutritaon.png"
+            class="img-fluid mb-4"
+            width="800"
+            height="172"
+            alt="">
+
+        <p class="block_text text-center text_green mt-4"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
             2023/2024, por meio de estratégias, <span class="text_orange">inovações e insights</span>
             revolucionários para sua carreira no <span class="text_orange">mercado digital</span></strong></p>
 
