--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     
-    <div class="container block d-flex flex-column align-items-center" id="block_01">
+    <header class="container block d-flex flex-column align-items-center" id="block_01">
 
         <img src="img/title.anutritaon.png"
             class="img-fluid mb-4"
@@ -38,9 +38,9 @@
             <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri my-4">
                 Quero conquistar renda extra
             </a>
-    </div>
+    </header>
 
-    <div class="container-fluid" id="block_02">
+    <section class="container-fluid" id="block_02">
         <div class="container block mt-4 d-flex flex-column align-items-center">
             <h2 class="block_title">Pra quem é o Ebook <span class="text_orange">#ANutriTaOn?</span></h2>
 
@@ -64,9 +64,9 @@
             </a>
 
         </div>
-    </div>
+    </section>
 
-    <div class="container-fluid" id="block_03">
+    <section class="container-fluid" id="block_03">
         <div class="container block mt-4 d-flex flex-column align-items-center">
             <h2 class="block_title text_orange">Porque trabalhar como nutricionista no mercado digital?</h2>
 
@@ -93,9 +93,9 @@
             </a>
 
         </div>
-    </div>
+    </section>
 
-    <div class="container-fluid" id="block_04">
+    <section class="container-fluid" id="block_04">
         <div class="container block mt-4 d-flex flex-column align-items-center">
             <p>São 10 tópicos abrangentes, cada um repleto de conteúdos
                 atualizados e estruturados em um formato passo-a-passo.</p>
@@ -106,7 +106,23 @@
             <p>Prepare-se para desbloquear todo o seu potencial e revolucionar
                 sua abordagem profissional.</p>
         </div>
-    </div>
+    </section>
+
+    <section class="container-fluid" id="block_05">
+        <div class="container block mt-4 d-flex flex-column align-items-center">
+            <h2 class="block_title text_green">Qual é o valor do seu sucesso?</h2>
+
+            <p class="text-center">Com este Ebook, você não apenas investe em conhecimento valioso, mas
+                também garante um caminho para gerar renda extra nas férias. Uma
+                oportunidade única de alcançar a liberdade financeira que você tanto
+                almeja.</p>
+                
+                <p>É mais do que um livro; é o seu ingresso para transformar sua
+                carreira e sua vida, por apenas:</p>
+
+
+        </div>
+    </section>
 
 </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
