--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <p>É uma oportunidade de crescimento contínuo, inovação e impacto significativo na área da nutrição.</p>
 
             <img 
-                src="img/nutri.no.bg.png"
+                src="img/nutri.block03.jpg"
                 class="mt-4"
                 width="320"
                 height="490"
                 alt="Capa do E-book">
 
-            <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri">
+            <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri m-t-minus-10 min-width-350">
                 Quero mudar de vida
             </a>
 
@@ -112,7 +112,7 @@
         <div class="container block mt-4 d-flex flex-column align-items-center">
             <h2 class="block_title text_green">Qual é o valor do seu sucesso?</h2>
 
-            <p class="text-center">Com este Ebook, você não apenas investe em conhecimento valioso, mas
+            <p>Com este Ebook, você não apenas investe em conhecimento valioso, mas
                 também garante um caminho para gerar renda extra nas férias. Uma
                 oportunidade única de alcançar a liberdade financeira que você tanto
                 almeja.</p>
