--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri Tá ON</title>
+    <meta name="description" content="Descubra estratégias mais atuais e inovadoras do mercado digital para nutricionistas">
+    <meta name="keywords" content="nutricionista, mercado digital, renda extra">
+    <meta name="author" content="John Doe">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,22 +22,22 @@
     
     <header class="container block d-flex flex-column align-items-center" id="block_01">
 
-        <img src="img/title.anutritaon.png"
+        <img src="img/title.anutritaon.webp"
             class="img-fluid mb-4"
             width="800"
             height="172"
-            alt="">
+            alt="A Nutri tá On - Renda estra já">
 
         <p class="block_text text-center text_green mt-4"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
             2023/2024, por meio de estratégias, <span class="text_orange">inovações e insights</span>
             revolucionários para sua carreira no <span class="text_orange">mercado digital</span></strong></p>
 
             <img 
-                src="img/capa-ebook.png"
+                src="img/capa-ebook.webp"
                 class="img-fluid my-4 py-4"
                 width="550"
                 height="624"
-                alt="Capa do E-book">
+                alt="Capa do E-book: Descubra estratégias mais atuais e inovadoras do mercado digital para nutricionistas">
 
             <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri my-4">
                 Quero conquistar renda extra
@@ -82,11 +86,11 @@
             <p>É uma oportunidade de crescimento contínuo, inovação e impacto significativo na área da nutrição.</p>
 
             <img 
-                src="img/nutri.block03.jpg"
+                src="img/nutri.block03.webp"
                 class="mt-4"
                 width="320"
                 height="490"
-                alt="Capa do E-book">
+                alt="Renda extra ainda neste verão">
 
             <a href="#" class="btn btn-lg btn-success py-3 rounded-pill btn-nutri m-t-minus-10 min-width-350">
                 Quero mudar de vida
@@ -108,21 +112,50 @@
         </div>
     </section>
 
-    <section class="container-fluid" id="block_05">
+    <footer class="container-fluid" id="block_05">
         <div class="container block mt-4 d-flex flex-column align-items-center">
             <h2 class="block_title text_green">Qual é o valor do seu sucesso?</h2>
 
-            <p>Com este Ebook, você não apenas investe em conhecimento valioso, mas
-                também garante um caminho para gerar renda extra nas férias. Uma
-                oportunidade única de alcançar a liberdade financeira que você tanto
-                almeja.</p>
-                
-                <p>É mais do que um livro; é o seu ingresso para transformar sua
-                carreira e sua vida, por apenas:</p>
+            <div class="card border-0 col-lg-6 col-md-6 col-sm-12">
+                <img 
+                    src="img/nutri.block05.webp"
+                    class="mt-4 img-fluid card-img-top"
+                    width="655"
+                    height="654"
+                    alt="Com este Ebook, você não apenas investe em conhecimento valioso, mas também garante um caminho para gerar renda extra nas férias">
 
+                <div class="card-body bg-success text-white">
+                    <p class="card-text">
+                        Com este Ebook, você não apenas investe em conhecimento valioso, mas
+                        também garante um caminho para gerar renda extra nas férias. Uma
+                        oportunidade única de alcançar a liberdade financeira que você tanto
+                        almeja.
+                    </p>
+                </div>
+            </div>
+
+                <p class="text_green text-uppercase my-4 py-4">
+                    <strong>
+                        É mais do que um livro; é o seu ingresso para transformar sua
+                        carreira e sua vida, por apenas:
+                    </strong>
+                </p>
+
+                <div class="values">
+                    <h2 class="text-muted text-decoration-line-through">De 109,90</h2>
+                    <h2>Por 3x 19,96</h2>
+                    <h2><em>ou à vista <strong>49,90</strong></em></h2>
+                </div>
+
+                <img 
+                    src="img/selo.webp"
+                    class="mt-4 img-fluid"
+                    width="320"
+                    height="317"
+                    alt="Selo de qualidade">
 
         </div>
-    </section>
+    </footer>
 
 </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
