corrindo alt da img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             class="img-fluid mb-4"
             width="800"
             height="172"
-            alt="A Nutri tá On - Renda estra já">
+            alt="A Nutri tá On - Renda extra já">
 
         <p class="block_text text-center text_green mt-4"><strong>Descubra como conquistar <span class="text_orange">RENDA EXTRA</span> ainda neste verão
             2023/2024, por meio de estratégias, <span class="text_orange">inovações e insights</span>
