add wordpress theme

--- a/index.html
+++ b/index.html
@@ -117,9 +117,14 @@
                 oportunidade única de alcançar a liberdade financeira que você tanto
                 almeja.</p>
                 
-                <p>É mais do que um livro; é o seu ingresso para transformar sua
-                carreira e sua vida, por apenas:</p>
+                <p class="text_orange text-uppercase"><strong>É mais do que um livro; é o seu ingresso para transformar sua
+                carreira e sua vida, por apenas:</strong></p>
 
+                <div class="values">
+                    <h2><span class="text-muted">De:</span> <span class="text-decoration-line-through">R$109,90</span></h2>
+                    <h2>Por 3x 19,96</h2>
+                    <h2>Ou à vista 49,90</h2>
+                </div>
 
         </div>
     </section>
